modal fix
distorted imfg fix for mobile

--- a/css/style.css
+++ b/css/style.css
@@ -58,13 +58,25 @@ body {
   z-index: 1;
 }
 .w3-modal-content{
-  display: flex;
   height: 90vh;
   padding-top: 3vh;
   justify-content: center;
 }
 
-img {
+.modal-img {
+  position: relative;
+  left: 50%;
+  transform: translatex(-50%);
+  height: -webkit-fill-available;
+}
+
+.gallery {
+  position: relative;
+  height: -webkit-fill-available;
+}
+
+.video-placeholder {
+  position: relative;
   height: -webkit-fill-available;
 }
 
@@ -101,6 +113,15 @@ img {
   height: -webkit-fill-available;
 }
 
+.mobile-divider {
+  display: none;
+  background-color: var(--darkjr);
+  margin-top: auto;
+  margin-bottom: auto;
+  width: -webkit-fill-available;
+  height: 1px;
+}
+
 .portfolio-info {
   display: flex;
   flex-direction: column;
@@ -122,6 +143,7 @@ img {
 .welcome-text {
   color: rgb(170, 170, 170);
   font-size: 1.6rem;;
+  line-height: 2rem;
 }
 
 .equipment-header {
@@ -252,8 +274,7 @@ li {
   width: max-content;
   height: 300px;
   color: var(--grayjr);
-  border: 3px solid #333;
-  border-color: hsla(0, 0%, 0%, 0.7);
+  border: 3px solid hsla(0, 0%, 0%, 0.7);
   cursor:zoom-in;
 }
 
@@ -267,6 +288,33 @@ li {
 }
 
 @media screen and ( max-width: 1244px ) {
+
+  .w3-modal{
+    position: fixed;
+    display: block;
+    width: 100vw;
+    height: 100vh;
+    background: rgba(0, 0, 0, 0.68);
+    z-index: 1;
+  }
+
+  .w3-modal-content{
+    padding: 0;
+    position: relative;
+    display: block;
+    height: 100%;
+    width: 100%;
+  }
+
+  .modal-img {
+    position: absolute;
+    width: 100%;
+    top: 50%;
+    transform: translateY(-50%);
+    height: auto;
+    left: 0;
+  }
+
   .distortion {
     display: none;
   }
@@ -274,27 +322,46 @@ li {
   .divider {
     display: none;
   }
+
+  .mobile-divider {
+    display: block;
+  }
 }
 
 @media screen and ( max-width: 768px ) {
-  .w3-modal-content{
-    position: absolute;
-    display: flex;
-    height: auto;
-    width: -webkit-fill-available;
-    justify-content: center;
-    top: 50%;
-    transform: translateY(-50%);
+  .w3-modal{
+    position: fixed;
+    display: block;
+    width: 100vw;
+    height: 100vh;
+    background: rgba(0, 0, 0, 0.68);
+    z-index: 1;
   }
 
-  .w3-modal-content > img{
-    width: -webkit-fill-available;
+  .w3-modal-content{
+    padding: 0;
+    position: relative;
+    display: block;
+    height: 100%;
+    width: 100%;
+  }
+
+  .modal-img {
+    position: absolute;
+    width: 100%;
+    top: 50%;
+    transform: translateY(-50%);
+    height: auto;
+    left: 0;
   }
 
   .divider {
     display: none;
   }
 
+  .mobile-divider {
+    display: block;
+  }
 
   .distortion {
     display: none;
@@ -303,12 +370,26 @@ li {
   .portfolio-info {
     display: flex;
     flex-direction: column;
+    justify-content: start;
     width: -webkit-fill-available;
+    padding-left: 3%;
+    padding-right: 3%;
+    padding-top: 2vh;
+    line-height: 1.2rem;
+    font-size: 0.8rem;
   }
 
   .element-item {
+    border: none;
     height: 180px;
-    min-width: none;
+  }
+
+  .wide-element-item {
+    min-width: 61%;
+  }
+
+  .narrow-element-item {
+   min-width: 46%; 
   }
 
   .button {
@@ -322,11 +403,42 @@ li {
   .play-video-icon {
     font-size: small;
   }
+
+  .gallery {
+    border: 2px solid hsla(0, 0%, 0%, 0.7);
+  }
+
+  .gallery {
+    position: relative;
+    height: -webkit-fill-available;
+  }
+  
+  .video-placeholder {
+    position: relative;
+    height: -webkit-fill-available;
+  }
   
   .close-video-icon {
     font-size: medium;
     bottom: 15%;
   }
-  
+
+  .logo-sm {
+    height: 40px;
+    width: 40px;
+  }
+
+  .welcome-text {
+    text-align: center;
+  }
+
+  .button-group .button {
+    font-size: 0.8rem;
+    padding: 0.7rem;
+  }
+
+  .grid {
+    margin-top: 2%;
+  }
 
 }
